src/objects/Vehicle_Relationship__c.object
<CustomObject>
    <description>Contact Portfolio: Vehicle Relationship record linked to customer and a vehicle</description>
    <fields>
        <fullName>Car_Relation__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Person&apos;s relationship to the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_CarRelation“</description>
        <inlineHelpText>Person&apos;s relationship to the vehicle</inlineHelpText>
        <label>Car Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship 
Function: ID of related person 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_Contact“</description>
        <inlineHelpText>ID of related person</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationships</relationshipLabel>
        <relationshipName>Vehicle_Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedByEpTransaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>CreatedByEpTransaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Relationship end date
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_EndDate“</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Service_Dealer__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Name of last service dealer
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is ”VehicleRel_LastServiceDealer“</description>
        <inlineHelpText>Name of last service dealer</inlineHelpText>
        <label>Last Service Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationships(Vehicle Relationship Last Service Dealer)</relationshipLabel>
        <relationshipName>Vehicle_Relationship_Last_Service_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Main_Usage__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship 
Function: Main use of the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is&quot;VehicleRel_MainUsage&quot;</description>
        <inlineHelpText>Main use of the vehicle</inlineHelpText>
        <label>Main Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Taxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Defines vehicle being new or used
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_NewUsed&quot;</description>
        <inlineHelpText>Defines vehicle being new or used</inlineHelpText>
        <label>New Used</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Relation__c</fullName>
        <description>Person&apos;s relationship to the vehicle&apos;s owner</description>
        <label>Owner Relation</label>
        <picklist>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Describe vehicle being private or company owned 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_Ownership&quot;</description>
        <inlineHelpText>Describe vehicle being private or company owned</inlineHelpText>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Purchase date of vehicle (information from leads, not from sales)
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_PurchaseDate&quot;</description>
        <inlineHelpText>Purchase date of vehicle (information from leads, not from sales)</inlineHelpText>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Vehicle Relationship Purchase Price
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_PurchasePrice&quot;</description>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegistrationProvince__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Province the vehicle was registered
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_RegistrationProvince&quot;</description>
        <inlineHelpText>Province the vehicle was registered</inlineHelpText>
        <label>Registration Province</label>
        <picklist>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zhejiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heilongjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jilin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liaoning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inner Mongolia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ningxia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qinghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shaanxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tianjin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tibet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xinjiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gansu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hubei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sichuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yunnan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangdong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guangxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guizhou</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_City__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: City the vehicle was registered
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_RegistrationCity&quot;</description>
        <inlineHelpText>City the vehicle was registered</inlineHelpText>
        <label>Registration City</label>
        <picklist>
            <controllingField>RegistrationProvince__c</controllingField>
            <picklistValues>
                <fullName>安庆市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>蚌埠市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>亳州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>巢湖市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>池州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>滁州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>阜阳市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>合肥市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>淮北市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>淮南市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>黄山市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>六安市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>马鞍山市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宿州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>铜陵市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>芜湖市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宣城市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>昆山市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>澳门特区</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>金门县</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>连江县</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>龙岩市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>南平市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宁德市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>莆田市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泉州市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>三明市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>厦门市</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>漳州市</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Date of registration of current registration number
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_RegistrationDate&quot;</description>
        <inlineHelpText>Date of registration of current registration number</inlineHelpText>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Licence plate number of vehicle 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is&quot; VehicleRel_RegistrationNumber&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Licence plate number of vehicle</inlineHelpText>
        <label>Registration Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Date of registration of current registration number
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleREl_Replacement&quot;</description>
        <inlineHelpText>Date of registration of current registration number</inlineHelpText>
        <label>Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selling_Dealer__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Name of the last dealer who sold the vehicle
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_ProvidedDealer&quot;</description>
        <inlineHelpText>Name of the last dealer who sold the vehicle</inlineHelpText>
        <label>Selling Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Relationships(Vehicle Relationship Selling Dealer)</relationshipLabel>
        <relationshipName>Vehicle_Relationships_Selling_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Relationship start date
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_StartDate&quot;</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>/* 
Created by: Amy Liang 
Used by: Vehicle Relationship
Function: Status of vehicle for this person
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_Status&quot;</description>
        <inlineHelpText>Status of vehicle for this person</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Previously Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Data_Source__c</fullName>
        <description>/*
Created by: Lio Huang
Used by: Lio Huang
Function: This field will not be in any page layout, read only for all profile as it is updated by integration.
Used in: Integration

Modify History
Modify By:
Modify Reason:
*/</description>
        <label>System Data Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedByEpTransactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>UpdatedByEpTransactions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <description>Attribute in Data Dictionary object Vehicle Relationship is &quot;VehicleRel_Validity&quot;</description>
        <label>Validity</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <formula>TEXT(Vehicle_ID__r.Brand__c)</formula>
        <label>Vehicle Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <formula>TEXT(Vehicle_ID__r.Class__c)</formula>
        <label>Vehicle Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: ID of vehicle in CRM 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle Relationship is&quot;VehicleRel_VehicleID&quot;</description>
        <label>Vehicle ID</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Vehicle Relationships</relationshipLabel>
        <relationshipName>Vehicle_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <formula>TEXT(Vehicle_ID__r.Model__c)</formula>
        <label>Vehicle Model</label>
        <type>Text</type>
    </fields>
    <label>Vehicle Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Vehicle_ID__c</columns>
        <columns>Selling_Dealer__c</columns>
        <columns>Registration_Number__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000000000}</displayFormat>
        <label>VehicleRel No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Relationship</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>